# solar-wallpaper

./: LICENSE  README.md  solar-wallpaper.cabal  stack.yaml
app/: Main.hs
res/: example.toml  solar-wallpaper.service  solar-wallpaper.timer
src/: SolarWallpaper.hs
src/Polysemy/: FileSystem.hs  Teletype.hs  Time.hs  Wallpaper.hs
src/SolarWallpaper/: Config.hs  Pretty.hs  Types.hs  XML.hs
test/: Spec.hs
