name:                solar-wallpaper
version:             0.1.0.0
synopsis:            Sun dependent dynamic wallpapers
-- description:
homepage:            https://github.com/tsahyt/solar-wallpaper#readme
license:             MIT
license-file:        LICENSE
author:              Paul Ogris
maintainer:          paul@tsahyt.com
copyright:           2019 Paul Ogris
category:            Desktop
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     SolarWallpaper
                       SolarWallpaper.Types
                       SolarWallpaper.XML
                       Polysemy.Time
                       Polysemy.FileSystem
  default-language:    Haskell2010
  ghc-options:         -O2 -flate-specialise -fspecialise-aggressively -Wall
  extensions:          DataKinds
                       FlexibleContexts
                       GADTs
                       LambdaCase
                       PolyKinds
                       RankNTypes
                       ScopedTypeVariables
                       TypeApplications
                       TypeOperators
                       TypeFamilies
  build-depends:       base >= 4.7 && < 5, 
                       solar >= 0.1, 
                       polysemy >= 0.1.2, 
                       time >= 1.9,
                       xml >= 1.3,
                       bytestring

executable solar-wallpaper-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -flate-specialise -fspecialise-aggressively -Wall
  extensions:          DataKinds
                       FlexibleContexts
                       GADTs
                       LambdaCase
                       PolyKinds
                       RankNTypes
                       ScopedTypeVariables
                       TypeApplications
                       TypeOperators
                       TypeFamilies
  build-depends:       base >= 4.7 && < 5, 
                       polysemy >= 0.1.2, 
                       solar >= 0.1, 
                       time >= 1.9, 
                       bytestring,
                       solar-wallpaper

test-suite spec-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       solar-wallpaper, 
                       base, 
                       hspec, 
                       hspec-expectations, 
                       time >= 1.9, 
                       solar >= 0.1, 
                       bytestring,
                       xml
